additional Training updates, new obsolescence batch, misc

--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -28,20 +28,20 @@
                 <div class="col-sm-4">
                   <div class="dealer">
                     <h4>O’Connell Jetting</h4>
-                    <p><span class="text-danger"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em></span><br />
-                    <span class="grey">Location:</span> Benicia<br/>
+                    <p><span class="grey">Location:</span> Benicia<br/>
                     <span class="grey">Phone:</span> 800-320-4848<br/>
-                    <span class="grey">Website:</span> <a href="http://www.oconnelljettingsystems.com/" target="_blank">www.oconnelljettingsystems.com</a>
+                      <span class="grey">Website:</span> <a href="http://www.oconnelljettingsystems.com/" target="_blank">www.oconnelljettingsystems.com</a></p>
+                    <p class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em>
                     </p>
                   </div>
                 </div>
                 <div class="col-sm-4">
                   <div class="dealer">
                     <h4>Pacific Jetting</h4>
-                    <p><span class="text-danger"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em></span><br />
-                    <span class="grey">Location:</span> Diamond Springs<br/>
+                    <p><span class="grey">Location:</span> Diamond Springs<br/>
                     <span class="grey">Phone:</span> 800-388-9872<br/>
-                    <span class="grey">Website:</span> <a href="http://www.pacificjetting.com/" target="_blank">www.pacificjetting.com</a>
+                    <span class="grey">Website:</span> <a href="http://www.pacificjetting.com/" target="_blank">www.pacificjetting.com</a></p>
+                    <p class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em>
                     </p>
                   </div>
                 </div>
@@ -59,10 +59,11 @@
                 <div class="col-sm-4">
                   <div class="dealer">
                     <h4>Blasters Ready Jet, Inc.</h4>
-                    <p><span class="text-danger"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em></span><br />
+                    <p>
                     <span class="grey">Location:</span> Tampa<br/>
                     <span class="grey">Phone:</span> 813-985-4500<br/>
-                    <span class="grey">Website:</span> <a href="http://www.blasters.net/" target="_blank">www.blasters.net</a>
+                    <span class="grey">Website:</span> <a href="http://www.blasters.net/" target="_blank">www.blasters.net</a></p>
+                    <p class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em>
                     </p>
                   </div>
                 </div>
@@ -102,20 +103,22 @@
                 <div class="col-sm-4">
                   <div class="dealer">
                     <h4>Advanced Pressure Systems</h4>
-                    <p><span class="text-danger"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em></span><br />
+                    <p>
                     <span class="grey">Location:</span> La Porte<br/>
                     <span class="grey">Phone:</span> 281-290-9951<br/>
-                    <span class="grey">Website:</span> <a href="http://www.advancedpressuresystems.com" target="_blank">www.advancedpressuresystems.com</a>
+                    <span class="grey">Website:</span> <a href="http://www.advancedpressuresystems.com" target="_blank">www.advancedpressuresystems.com</a></p>
+                    <p class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em>
                     </p>
                   </div>
                 </div>
                 <div class="col-sm-4">
                   <div class="dealer">
                     <h4>Advanced Pressure Systems</h4>
-                    <p><span class="text-danger"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em></span><br />
+                    <p>
                     <span class="grey">Location:</span> Tomball<br/>
                     <span class="grey">Phone:</span> 281-290-9950<br/>
-                    <span class="grey">Website:</span> <a href="http://www.advancedpressuresystems.com" target="_blank">www.advancedpressuresystems.com</a>
+                    <span class="grey">Website:</span> <a href="http://www.advancedpressuresystems.com" target="_blank">www.advancedpressuresystems.com</a></p>
+                    <p class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em>
                     </p>
                   </div>
                 </div>
@@ -205,10 +208,11 @@
                 <div class="col-sm-4">
                   <div class="dealer">
                     <h4>Nanjing Fedjetting Tech Co. Ltd</h4>
-                    <p><span class="text-danger"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em></span><br />
+                    <p>
                     <span class="grey">Location:</span> Nanjing<br/>
                     <span class="grey">Phone:</span> (+86) 25 5215 7501<br/>
-                    <span class="grey">Website:</span> <a href="http://www.fedjetting.com/" target="_blank">www.fedjetting.com</a>
+                    <span class="grey">Website:</span> <a href="http://www.fedjetting.com/" target="_blank">www.fedjetting.com</a></p>
+                    <p class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em>
                     </p>
                   </div>
                 </div>
@@ -373,11 +377,21 @@
               <h2>Ontario</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
+                  <h4>Advanced Pressure Systems</h4>
+                  <p><span class="grey">Location:</span>  Burlington, Ontario<br/>
+                  <span class="grey">Phone:</span> (877) 290-4277<br/>
+                  <span class="grey">Website:</span> <a href="https://advancedpressuresystems.com/" target="_blank">www.advancedpressuresystems.com</a></p>
+                  <p class="text-info"><em><i class="fa fa-wrench"></i> Authorized Parts &amp; Tools<br/>
+                  <i class="fa fa-cogs"></i> Automated Equipment<br />
+                  <i class="fa fa-truck"></i> Authorized Rental Center</em>
+                  </p>
+                </div>
+                <div class="col-sm-4 dealer">
                   <h4>Industrial Mechanical Specialties</h4>
-                  <p><span class="text-danger"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em></span><br />
-                  <span class="grey">Location:</span>  Thornhill, Ontario<br/>
+                  <p><span class="grey">Location:</span>  Thornhill, Ontario<br/>
                   <span class="grey">Phone:</span> 905-889-5237<br/>
-                  <span class="grey">Website:</span> <a href="http://www.imscanada.com/" target="_blank">www.imscanada.com</a>
+                  <span class="grey">Website:</span> <a href="http://www.imscanada.com/" target="_blank">www.imscanada.com</a></p>
+                  <p class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em>
                   </p>
                 </div>
               </div>
@@ -632,7 +646,7 @@
         <div id="wb-lamerica" class="panel-collapse collapse" role="tabpanel" aria-labelledby="wb-lamerica">
           <div class="dealers-by-region">
             <ul class="list-inline">
-<!--              <li><a href="#Argentina" class="region">Argentina</a></li>-->
+              <li><a href="#Argentina" class="region">Argentina</a></li>
               <li><a href="#Brazil" class="region">Brazil</a></li>
               <li><a href="#Chile" class="region">Chile</a></li>
               <li><a href="#Colombia" class="region">Colombia</a></li>
@@ -641,18 +655,17 @@
             </ul>
           </div>
           <ul class="list-group">
-<!--
             <li class="list-group-item">
               <h2 id="Argentina">Argentina</h2>
-               1st row 
+              <!-- 1st row -->
               <div class="row first">
                 <div class="col-sm-4">
                   <div class="dealer">
-                    <h4>Tecnica Armaq S.A.</h4>
+                    <h4>Flow International Corporation</h4>
                     <p>
-                    <span class="grey">Location:</span> Capital Federal<br/>
-                    <span class="grey">Phone:</span> (+54) 11 4574 5995<br/>
-                    <span class="grey">Website:</span> <a href="http://www.tecnicarmaq.com.ar" target="_blank">www.tecnicarmaq.com.ar</a>
+                    <span class="grey">Location:</span> Buenos Aires<br/>
+                    <span class="grey">Phone:</span> (+54) 11 4700 - 8881<br/>
+                    <span class="grey">Website:</span> <a href="https://www.flowwaterjet.com/" target="_blank">www.flowwaterjet.com</a>
                     </p>
                   </div>
                 </div>
@@ -663,7 +676,6 @@
                 </a>
               </div>
             </li>
--->
             <li class="list-group-item">
               <h2 id="Brazil">Brazil</h2>
               <!-- 1st row -->
@@ -674,7 +686,7 @@
                     </p>
                   </div>
                   <div class="dealer">
-                    <h4>Flow Latino</h4>
+                    <h4>Flow International Corporation</h4>
                     <p>
                     <span class="grey">Location:</span> São Paulo<br/>
                     <span class="grey">Phone:</span> +55-11-3616-2820<br/>
