Replace Hubspot web contact form with Pardot

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -86,6 +86,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="/assets/plugins/featherlight/featherlight.js" type="text/javascript" charset="utf-8"></script>
 <!--<script src="//cdn.rawgit.com/noelboss/featherlight/1.6.1/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>-->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.3/iframeResizer.min.js"></script>
 
   <!-- Tipue Search -->
   <script src="/assets/plugins/tipuesearch/tipuesearch_content.js"></script>
