--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1,7 +1,7 @@
 <!-- Sewer Tab Content -->
 <div role="tabpanel" class="tab-pane" id="sewer-tab">
   <div class="row">
-    <p>Select your region below to view a list of <span class="bold">sewer tools dealers</span>.</p>
+    <p>Select your region below to view a list of <span class="bold" style="text-transform:uppercase">sewer tools dealers</span>.</p>
     <div class="panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default dealer-list">
         <div class="panel-heading" role="tab" id="sw-us-heading">
@@ -685,19 +685,6 @@
               <h2 id="md">Maryland</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-                  <h4>Atlantic Machinery, Inc</h4>
-                  <p>
-                  <span class="grey">Location:</span> Silver Spring, MD<br/>
-                  <span class="grey">Phone:</span> 301 585 0800<br/>
-                  <span class="grey">Website:</span> <a href="http://www.atlanticmachineryinc.com" target="_blank">www.atlanticmachineryinc.com</a>
-                  </p>
-                  <p>
-                  <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
-                  <span class="text-info"><i class="fa fa-circle"></i> <em>Authorized Magnum Dealer</em></span><br /> 
-                  <span class="text-info"><i class="fa fa-arrows-alt"></i> <em>Authorized Hydro-X Dealer</em></span><br />
-                  </p>
-                </div>
-                <div class="col-sm-4 dealer">
                   <h4>Spartan Tool LLC</h4>
                   <p>
                   <span class="grey">Location:</span> Frederick, MD<br/>
@@ -989,6 +976,7 @@
             <li class="list-group-item">
               <h2 id="ny">New York</h2>
               <div class="row first">
+<!--
                 <div class="col-sm-4 dealer">
                   <h4>Joe Johnson Equipment</h4>
                   <p>
@@ -1015,6 +1003,7 @@
                   <span class="text-info"><i class="fa fa-arrows-alt"></i> <em>Authorized Hydro-X Dealer</em></span><br />
                   </p>
                 </div>
+-->
                 <div class="col-sm-4 dealer">
                   <h4>Spartan Tool LLC</h4>
                   <p>
@@ -1660,13 +1649,15 @@
           </h4>
         </div>
         <div id="sw-canada" class="panel-collapse collapse" role="tabpanel" aria-labelledby="sw-canada">
+<!--
           <div class="dealers-by-region">
             <ul class="list-inline">
-<!--              <li><a href="#Alberta" class="region">Alberta</a></li>-->
+              <li><a href="#Alberta" class="region">Alberta</a></li>
               <li><a href="#bc" class="region">British Columbia</a></li>
               <li><a href="#Ontario" class="region">Ontario</a></li>
             </ul>
           </div>
+-->
           <ul class="list-group">
 <!--
             <li class="list-group-item">
@@ -1706,6 +1697,7 @@
                 </a>
               </div>
             </li>
+<!--
             <li class="list-group-item">
               <h2 id="Ontario">Ontario</h2>
               <div class="row first">
@@ -1724,6 +1716,7 @@
                 </a>
               </div>
             </li>
+-->
           </ul>
         </div>
       </div>
