--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -1,7 +1,7 @@
 <!-- Waterblast Tab Content -->
 <div role="tabpanel" class="tab-pane" id="wb-tab">
   <div class="row">
-    <p>Select your region below to view a list of <span class="bold">waterblast dealers</span>.</p>
+    <p>Select your region below to view a list of <span class="bold" style="text-transform:uppercase">waterblast dealers</span>.</p>
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="heading-wb-usa">
@@ -422,6 +422,9 @@
               <li><a href="#Norway" class="region">Norway</a></li>
               <li><a href="#Poland" class="region">Poland</a></li>
               <li><a href="#Romania" class="region">Romania</a></li>
+              <li><a href="#Spain" class="region">Spain</a></li>
+              <li><a href="#Sweden" class="region">Sweden</a></li>
+              <li><a href="#Ukraine" class="region">Ukraine</a></li>
             </ul>
           </div>
           <ul class="list-group">
@@ -624,6 +627,29 @@
                   <p>      
                   <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
                   </p>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <h2 id="Ukraine">Ukraine</h2>
+              <div class="row">
+                <div class="col-sm-4 dealer">
+                  <h4>Z-Techno Ukraine, LLC</h4>
+                  <p>
+                  <span class="grey">Location:</span> Kyiv, Ukraine<br/>
+                  <span class="grey">Phone:</span> (+38) 044 362 23 53<br/>
+                  <span class="grey">Website:</span> <a href="http://www.z-t.com.ua" target="_blank">www.z-t.com.ua</a>
+                  </p>
+<!--
+                  <p>      
+                  <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
+                  </p>
+-->
                 </div>
               </div>
               <div class="row text-right">
@@ -964,9 +990,9 @@
                 </div>
                 <div class="col-sm-4">
                   <div class="dealer">
-                    <h4>Metco</h4>
+                    <h4>METCO Industrial</h4>
                     <p>
-                    <span class="grey">Location:</span> Edwardstown, South Australia<br/>
+                    <span class="grey">Location:</span> Adelaid, South Australi<br/>
                     <span class="grey">Phone:</span> (+61) 8 8297 2011<br/>
                     <span class="grey">Website:</span> <a href="http://www.metco.com.au" target="_blank">www.metco.com.au</a>
                     </p>
