--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1660,8 +1660,8 @@
                   <h4>ST DAEHEUNG Co., LTD.</h4>
                   <p>
                   <span class="grey">Location:</span> Bucheon, Korea<br/>
-                  <span class="grey">Phone:</span> +82-02-2694-7881<br/>
-                  <span class="grey">Website:</span> <a href="http://www.ridgidkorea.com/" target="_blank">www.ridgidkorea.com/</a>
+                  <span class="grey">Phone:</span> +82-032-668-0989<br/>
+                  <span class="grey">Website:</span> <a href="http://www.ridgidkorea.com/" target="_blank">www.ridgidkorea.com</a>
                   </p>
                 </div>
                 <div class="col-sm-4 dealer">
