web hosting update for new blog

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
         <ul class="list-unstyled link-list">
           <li><a href="/product-catalogs">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/manuals">Product Manuals</a><i class="fa fa-angle-right"></i>
-          <li><a href="http://news.stoneagetools.com/topic/product-bulletins">Product Bulletins</a><i class="fa fa-angle-right"></i>
+          <li><a href="http://news.stoneagetools.com/category/product-bulletins">Product Bulletins</a><i class="fa fa-angle-right"></i>
           <li><a href="/service">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/purchase-options">Purchase Options</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/safety">Safety Information</a><i class="fa fa-angle-right"></i></li>
@@ -26,7 +26,7 @@
         <ul class="list-unstyled link-list">
           <li><a href="/about">Our Story</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/jobs">Careers</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="http://news.stoneagetools.com">News</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="https://news.stoneagetools.com">News</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/contact">Contact</a><i class="fa fa-angle-right"></i></li>
         </ul>
         
