--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1694,6 +1694,7 @@
           <div class="dealers-by-region">
             <ul class="list-inline">
               <li><a href="#sw-Alberta" class="region">Alberta &amp; British Columbia</a></li>
+              <li><a href="#sw-NovaScotia" class="region">New Brunswick &amp; Nova Scotia</a></li>
               <li><a href="#sw-Ontario" class="region">Ontario &amp; Quebec</a></li>
               <li><a href="#sw-Saskatchewan" class="region">Saskatchewan</a></li>
             </ul>
@@ -1709,6 +1710,29 @@
                     <span class="grey">Phone:</span> 604-430-4274<br/>
                     <span class="grey">Website:</span> <a href="http://www.vimarequipment.com" target="_blank">www.vimarequipment.com</a>
                     </p>
+                  <p>
+                  <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-circle"></i> <em>Authorized Magnum Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-arrows-alt"></i> <em>Authorized Hydro-X Dealer</em></span><br />        
+                  </p>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <h2 id="sw-NovaScotia">New Brunswick &amp; Nova Scotia</h2>
+              <div class="row first">
+                <div class="col-sm-4 dealer">
+                  <h4>SNT Solutions</h4>
+                  <p>
+                  <span class="grey">Location:</span> Dartmouth, NS<br/>
+                  <span class="grey">Phone:</span> 902-830-5057<br/>
+<!--                  <span class="grey">Website:</span> <a href="http://www.sntsolutions.ca" target="_blank">www.sntsolutions.ca</a>-->
+                  </p>
                   <p>
                   <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
                   <span class="text-info"><i class="fa fa-circle"></i> <em>Authorized Magnum Dealer</em></span><br /> 
