SpinCat updates and misc

--- a/_includes/downhole-dealers.html
+++ b/_includes/downhole-dealers.html
@@ -3,7 +3,7 @@
   <div class="row margin-bottom-120">
     <table class="table table-responsive">
       <tr>
-        <td>For questions related to the SpinCat line of downhole tools, contact <strong>Alan Charles</strong>.<br>
+        <td>For questions related to the StoneAge SpinCat&trade; line of downhole tools, contact <strong>Alan Charles</strong>.<br>
           Phone: +1 (720) 219-0777<br>
           Email: <a href="mailto:alan.charles@stoneagetools.com">alan.charles@stoneagetools.com</a></td>
       </tr>
