--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1429,7 +1429,7 @@
               <h2 id="tx">Texas</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-                  <a href="http://www.sewertools.com" target="_blank"><img style="max-width: 140px;" src="/assets/img/logo-CLS.png" alt="CLS Sewer Equipment Co." /></a>
+                  <a href="http://www.sewertools.com" target="_blank"><img style="max-width: 180px;" src="/assets/img/logo-CLS.png" alt="CLS Sewer Equipment Co." /></a>
                   <h4>CLS Sewer Equipment Co.</h4>
                   <p>
                   <span class="grey">Location:</span> Richardson, TX<br/>
@@ -1438,7 +1438,6 @@
                   </p>
                   <p>
                   <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
-                  <span class="text-info"><i class="fa fa-circle"></i> <em>Authorized Magnum Dealer</em></span><br /> 
                   <span class="text-info"><i class="fa fa-arrows-alt"></i> <em>Authorized Hydro-X Dealer</em></span><br />
                   </p>
                 </div>
@@ -1775,15 +1774,18 @@
         <div id="sw-canada" class="panel-collapse collapse" role="tabpanel" aria-labelledby="sw-canada">
           <div class="dealers-by-region">
             <ul class="list-inline">
-              <li><a href="#sw-Alberta" class="region">Alberta &amp; British Columbia</a></li>
+              <li><a href="#sw-Alberta" class="region">Alberta</a></li>
+              <li><a href="#sw-BC" class="region">British Columbia</a></li>
+              <li><a href="#sw-Manitoba" class="region">Manitoba</a></li>
               <li><a href="#sw-NovaScotia" class="region">New Brunswick &amp; Nova Scotia</a></li>
-              <li><a href="#sw-Ontario" class="region">Ontario &amp; Quebec</a></li>
+              <li><a href="#sw-Ontario" class="region">Ontario</a></li>
+              <li><a href="#sw-Quebec" class="region">Quebec</a></li>
               <li><a href="#sw-Saskatchewan" class="region">Saskatchewan</a></li>
             </ul>
           </div>
           <ul class="list-group">
             <li class="list-group-item">
-              <h2 id="sw-Alberta">Alberta &amp; British Columbia</h2>
+              <h2 id="sw-Alberta">Alberta</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
                   <a href="http://www.vimarequipment.com" target="_blank"><img style="max-width: 140px;" src="/assets/img/logo-vimar.png" alt="Vimar Equipment" /></a>
@@ -1793,6 +1795,54 @@
                     <span class="grey">Phone:</span> 604-430-4274<br/>
                     <span class="grey">Website:</span> <a href="http://www.vimarequipment.com" target="_blank">www.vimarequipment.com</a>
                     </p>
+                  <p>
+                  <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-circle"></i> <em>Authorized Magnum Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-arrows-alt"></i> <em>Authorized Hydro-X Dealer</em></span><br />        
+                  </p>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <h2 id="sw-BC">British Columbia</h2>
+              <div class="row first">
+                <div class="col-sm-4 dealer">
+                  <a href="http://www.vimarequipment.com" target="_blank"><img style="max-width: 140px;" src="/assets/img/logo-vimar.png" alt="Vimar Equipment" /></a>
+                  <h4>Vimar Equipment</h4>
+                    <p>
+                    <span class="grey">Location:</span> Burnaby, BC<br/>
+                    <span class="grey">Phone:</span> 604-430-4274<br/>
+                    <span class="grey">Website:</span> <a href="http://www.vimarequipment.com" target="_blank">www.vimarequipment.com</a>
+                    </p>
+                  <p>
+                  <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-circle"></i> <em>Authorized Magnum Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-arrows-alt"></i> <em>Authorized Hydro-X Dealer</em></span><br />        
+                  </p>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <h2 id="sw-Manitoba">Manitoba</h2>
+              <div class="row first">
+                <div class="col-sm-4 dealer">
+                  <a href="http://www.fer-marc.com" target="_blank"><img style="max-width: 140px;" src="/assets/img/logo-fer-marc.gif" alt="Fer-Marc Equipment" /></a>
+                  <h4>Fer-Marc Equipment</h4>
+                  <p>
+                  <span class="grey">Location:</span> Regina, SK<br/>
+                  <span class="grey">Phone:</span> 306-569-9041<br/>
+                  <span class="grey">Website:</span> <a href="http://www.fer-marc.com" target="_blank">www.fer-marc.com</a>
+                  </p>
                   <p>
                   <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
                   <span class="text-info"><i class="fa fa-circle"></i> <em>Authorized Magnum Dealer</em></span><br /> 
@@ -1830,7 +1880,31 @@
               </div>
             </li>
             <li class="list-group-item">
-              <h2 id="sw-Ontario">Ontario &amp; Quebec</h2>
+              <h2 id="sw-Ontario">Ontario</h2>
+              <div class="row first">
+                <div class="col-sm-4 dealer">
+                  <a href="http://www.liquidlaser.com" target="_blank"><img style="max-width: 140px;" src="/assets/img/logo-liquid_laser.png" alt="Liquid Laser Jetting Systems" /></a>
+                  <h4>Liquid Laser Jetting Systems</h4>
+                  <p>
+                  <span class="grey">Location:</span> Concord, ON<br/>
+                  <span class="grey">Phone:</span> 877-738-LLJS<br/>
+                  <span class="grey">Website:</span> <a href="http://www.liquidlaser.com" target="_blank">www.liquidlaser.com</a>
+                  </p>
+                  <p>
+                  <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-circle"></i> <em>Authorized Magnum Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-arrows-alt"></i> <em>Authorized Hydro-X Dealer</em></span><br />        
+                  </p>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <h2 id="sw-Quebec">Quebec</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
                   <a href="http://www.liquidlaser.com" target="_blank"><img style="max-width: 140px;" src="/assets/img/logo-liquid_laser.png" alt="Liquid Laser Jetting Systems" /></a>
@@ -2049,7 +2123,7 @@
               <h2 id="sw-Switzerland">Switzerland</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-                  <a href="http://www.toni-kupfer-sa.ch" target="_blank"><img style="max-width: 140px;" src="/assets/img/logo-AquaTec.png" alt="Toni KÜPFER SA" /></a>
+                  <a href="http://www.toni-kupfer-sa.ch" target="_blank"><img style="max-width: 90px;" src="/assets/img/logo-Toni-Kupfer.png" alt="Toni KÜPFER SA" /></a>
                   <h4>Toni KÜPFER SA</h4>
                   <p>
                   <span class="grey">Location:</span> Bex, Switzerland<br/>
