--- a/_includes/contact-main.html
+++ b/_includes/contact-main.html
@@ -36,7 +36,7 @@
         ['StoneAge Houston', 29.6801084,-95.1667982, '/houston'],
         ['StoneAge Louisiana', 30.2112627,-90.9894516, '/louisiana'],
         ['StoneAge Ohio', 41.315634,-81.779663, '/ohio'],
-        ['StoneAge Europe', 52.1267887,-2.3032028, '/europe'],
+        ['StoneAge Europe', 52.1571103,-2.163515, '/europe'],
         ['StoneAge Netherlands', 51.8141698,4.4977865, '/netherlands']
     ];
 
