patent updates plus misc

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,8 +13,8 @@
           <li><a href="/service">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/purchase-options">Purchase Options</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/safety">Safety Information</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="/solutions">StoneAge Solutions</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/training">StoneAge Training</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/solutions">StoneAge Solutions</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/rentals">Rentals</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
@@ -27,6 +27,7 @@
           <li><a href="/about">Our Story</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/jobs">Careers</a><i class="fa fa-angle-right"></i></li>
           <li><a href="https://news.stoneagetools.com">News</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/patents">Patents</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/contact">Contact</a><i class="fa fa-angle-right"></i></li>
         </ul>
         
