--- a/_includes/footer-cta.html
+++ b/_includes/footer-cta.html
@@ -1,7 +1,7 @@
 <!-- Footer CTA -->
 <div class="row footer-cta">
   <div class="container">
-    <a href="/contact">Need help with a job? <span>Contact Our Support Team</span> <i class="fa fa-whatsapp"></i></a>
+    <a href="/contact">Need help with a job? <span>Contact Our Support Team</span></a>
   </div>
 </div>
 <!-- End Footer CTA -->
