--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1349,8 +1349,7 @@
                   <p>
                   <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
                   <span class="text-info"><i class="fa fa-circle"></i> <em>Authorized Magnum Dealer</em></span><br /> 
-                  <span class="text-info"><i class="fa fa-arrows-alt"></i> <em>Authorized Hydro-X Dealer</em></span><br />      
-                  <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span>
+                  <span class="text-info"><i class="fa fa-arrows-alt"></i> <em>Authorized Hydro-X Dealer</em></span>
                   </p>
                 </div>
               </div>
