new products - Age of Control

--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -733,16 +733,6 @@
               <div class="row first">
                 <div class="col-sm-4">
                   <div class="dealer">
-                    <h4>Nexxo S.A.</h4>
-                    <p>
-                    <span class="grey">Location:</span> Valparaíso<br/>
-                    <span class="grey">Phone:</span> (+56 32) 213 3200<br/>
-                    <span class="grey">Website:</span> <a href="http://www.nexxo.cl" target="_blank">www.nexxo.cl</a>
-                    </p>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <div class="dealer">
                     <h4>Orbitec</h4>
                     <p>
                     <span class="grey">Location:</span> Santiago<br/>
@@ -846,6 +836,7 @@
           <div class="dealers-by-region">
             <ul class="list-inline">
               <li><a href="#Azerbaijan" class="region">Azerbaijan</a></li>
+              <li><a href="#Egypt" class="region">Egypt</a></li>
               <li><a href="#Turkey" class="region">Turkey</a></li>
               <li><a href="#UAE" class="region">United Arab Emirates</a></li>
             </ul>
@@ -863,6 +854,23 @@
                     <span class="grey">Phone:</span> +994124640144<br/>
                     <span class="grey">Website:</span> <a href="http://www.royaltonholdings.com" target="_blank">www.royaltonholdings.com</a><br/>
                     <span class="grey">Email:</span> <a href="mailto:baku@royaltonholdings.com" target="_blank">baku@royaltonholdings.com</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <h2 id="Egypt">Egypt</h2>
+              <!-- 1st row -->
+              <div class="row first">
+                <div class="col-sm-4">
+                  <div class="dealer">
+                    <h4>Drexel Oilfield Equipment</h4>
+                    <p>
+                    <span class="grey">Location:</span> Cairo, Egypt<br/>
+                    <span class="grey">Phone:</span> +202 27036444<br/>
+                    <span class="grey">Website:</span> <a href="https://drexelegypt.com" target="_blank">www.drexelegypt.com</a><br/>
+                    <span class="grey">Email:</span> <a href="mailto:inquiries@drexelegypt.com" target="_blank">inquiries@drexelegypt.com</a>
                     </p>
                   </div>
                 </div>
